# aox-demo

./: .env.example  .gitignore  README.md  docker-compose.yml
db/: init.sql
docker/: Dockerfile
service_demo/: .env.example  Cargo.toml  README.md
service_demo/src/: async_http_collector.rs  atomic_swap.rs  main.rs  ohlc.rs  ohlc_calc.rs  price_info.rs  rate_limit.rs  shared_state.rs  terminal_output.rs
service_demo/src/storage/: mod.rs  postgres.rs  stdout.rs
