[package]
name = "service_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
dotenv = "0.15.0"
reqwest = { version = "0.12.4" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
signal = "0.7.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "sync", "tokio-macros", "time", "signal"] }
tokio-postgres = "0.7.10"
